[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/big_mushroom.png" type="Texture" id=1]
[ext_resource path="res://misc/fruitparticle.tscn" type="PackedScene" id=2]
[ext_resource path="res://level_objects/powerups/big_mushroom.gd" type="Script" id=3]
[ext_resource path="res://sprites/light-gradient.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.19, 1.0 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 4 )

[node name="big_mushroom" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -99, -5 )
texture = ExtResource( 1 )
offset = Vector2( 99, 5 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 1 )

[node name="Particles2D" parent="." instance=ExtResource( 2 )]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 4 )
color = Color( 0, 0.858824, 1, 1 )
energy = 1.19
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
